[package]
name = "ls_core"
version = "0.1.0"
authors = ["mame <mamecccci@gmail.com>"]
edition = "2018"


[build]


[lib]
crate-type = ["cdylib", "rlib"]


[features]
default = ["console_error_panic_hook"]


[dependencies]
regex="^1.4.5"
lazy_static = "^1.4.0"
wasm-bindgen = "0.2.63"
tree-sitter = "^0.19.3"
tree-sitter-cpp = "^0.19"
tree-sitter-java = "^0.19"
tree-sitter-javascript = "^0.19"
tree-sitter-python = "^0.19"
tree-sitter-rust = "^0.19"
tree-sitter-typescript = "^0.19"
tree-sitter-bash = "^0.19"
console_error_panic_hook = { version = "0.1.6", optional = true }


[dev-dependencies]
wasm-bindgen-test = "0.3.13"


[build-dependencies]
cc = "*"
